移动端适配20210901

--- a/src/styles/-public.scss
+++ b/src/styles/-public.scss
@@ -226,14 +226,16 @@
                 }
             }
         }
-        h2{
-            clear: both;
+        .search-info{
             display: block;
+            height: 30px;
             overflow: hidden;
-            font-size: 14px;
-            color: #2e84f6;
-            line-height: 24px;
-            padding-bottom: 10px;
+            font-size: 12px;
+            line-height: 30px;
+            color: 444;
+            span{
+                color: $red;
+            }
         }
     }
     .filter-button{
@@ -242,7 +244,7 @@
       line-height: 22px;
       display: inline-block;
       background: #fff;
-      padding: 5px 10px;
+      padding: 5px 10px 5px 0;
       cursor: pointer;
       .svg-i{
           margin-left: 5px;
