--- a/src/styles/-logsIndex.scss
+++ b/src/styles/-logsIndex.scss
@@ -28,3 +28,13 @@
         }
     }
 }
+.mobile{
+    .website-log{
+        .box-card{
+            .clues-title{
+                padding: 10px;
+                background: #fff;
+            }
+        }
+    }
+}
