--- a/src/styles/-Enphone.scss
+++ b/src/styles/-Enphone.scss
@@ -219,21 +219,57 @@
     .tips-list{
       width: 100%;
       overflow: hidden;
+      background:#e4f1f7;
+      border:1px solid #47a5cf;
+      border-radius:4px;
+      padding-top:20px;
+      padding-bottom:10px;
+      margin-bottom:15px;
       .item-tips{
-        width: 100%;
-        line-height: 32px;
-        text-align: center;
+        float: left;
+        width:47%;
+        margin-left:2%;
+        line-height:16px;
+        text-align:left;
         margin-bottom: 10px;
+        color:#333333;
+        font-size: 13px;
+        padding:11px 15px;
+        border-radius:20px;
+        background-color: #fff;
+        background-image: linear-gradient(90deg, #fff 10%, #e4f1f7 50%,#fff);
+        background-position: 10% center;
+        background-size: 200% 100%;
+        background-repeat: no-repeat;
+        transition: background-position 1s ease;
         cursor: pointer;
+        &:hover{background-position:-50% center}
+        i{
+          font-size: 13px;
+          font-weight: bold;
+          width: 16px;
+          height:16px;
+          text-align: center;
+          line-height: 16px;
+          display: inline-block;
+          border-radius: 4px;
+          color:#fff;
+          font-style: normal;
+        }
+        strong{
+          display: inline-block;
+          border-right: 1px solid #fdac32;
+          padding-right: 10px;
+          margin-right: 10px;
+          padding-left: 10px;
+          width:100px;
+        }
+        span{}
         &.type-1{
-          border: 1px solid #97b2ff;
-          background: #e9ffea;
-          color: #d51d1d;
+          i{background:#e42c35;}
         }
         &.type-2{
-          border: 1px solid #ffd8a4;
-          background: #fffae9;
-          color: #379bff;
+          i{background:#2e88ff;}
         }
       }
     }
