--- a/src/styles/-Sale.scss
+++ b/src/styles/-Sale.scss
@@ -90,6 +90,58 @@
             padding: 5px;
           }
         }
+        .tips-list{
+          width: 100%;
+          overflow: hidden;
+          background:#e4f1f7;
+          border:1px solid #47a5cf;
+          border-radius:4px;
+          padding-top:20px;
+          padding-bottom:10px;
+          margin-bottom:15px;
+          .item-tips{
+            float: left;
+            width:47%;
+            margin-left:2%;
+            line-height:16px;
+            text-align:left;
+            margin-bottom: 10px;
+            color:#333333;
+            font-size: 13px;
+            padding:11px 15px;
+            border-radius:20px;
+            background-color: #fff;
+            background-image: linear-gradient(90deg, #fff 10%, #e4f1f7 50%,#fff);
+            background-position: 10% center;
+            background-size: 200% 100%;
+            background-repeat: no-repeat;
+            transition: background-position 1s ease;
+            cursor: pointer;
+            &:hover{background-position:-50% center}
+            i{
+              font-size: 13px;
+              font-weight: bold;
+              width: 16px;
+              height:16px;
+              text-align: center;
+              line-height: 16px;
+              display: inline-block;
+              border-radius: 4px;
+              color:#fff;
+              font-style: normal;
+              background:#e42c35;
+            }
+            strong{
+              display: inline-block;
+              border-right: 1px solid #fdac32;
+              padding-right: 10px;
+              margin-right: 10px;
+              padding-left: 10px;
+              width:100px;
+            }
+            span{}
+          }
+        }
     }
 }
 .box-card.SaleCardFlFrTable{
@@ -100,22 +152,6 @@
          }
          .clues-info{
              margin-bottom:0px;
-         }
-         .clues-warn{
-           clear: both;
-           li{
-            clear: both;
-            text-align: center;
-            background: #fef0f0;
-            border: 1px solid #fbc4c4;
-            color: #f56c6c;
-            font-size: 14px;
-            line-height: 20px;
-            padding: 3px 0px;
-            margin-bottom: 10px;
-            border-radius: 3px;
-            cursor: pointer;
-           }
          }
      }
      .SiteTable{
@@ -150,14 +186,14 @@
      text-align: center;
      line-height:0;
      font-size:0;
-     padding: 6px;
+     padding:7px;
      margin-top: 10px;
-     border-radius: 3px;
-     border: 1px solid #97b2ff;
-     background: #e9ffea;
-     color: #d51d1d;
+     border-radius:4px;
+     border: 1px solid #47a5cf;
+     background: #ecf2fa;
      width: 100%;
      margin-bottom: 10px;
+     color: #333333;
      .tips,b,em{
        font-style: normal;
        vertical-align: top;
@@ -165,18 +201,23 @@
        height: 28px;
        line-height: 28px;
      }
-     .el-button{
+     .el-button.el-button--primary{
        margin: 0 10px;
+       background-color: #999999;
+       border-color: #999999;
+       &:hover{
+        background-color: #666;
+        border-color: #666;
+       }
      }
      .tips{
-       color: #d51d1d;
-       font-weight: bold;
+       color: #ff840b;
+       display: inline-block;
+       margin-right: 5px;
      }
      b{
-       color: #379bff;
-     }
-     em{
-       color: #a06d14;
+       color: #ff840b;
+       text-decoration: underline;
      }
    }
 }
@@ -263,8 +304,9 @@
         dl{
           dt{
             line-height: 24px;
-            font-size: 14px;
-            span{
+            font-size: 13px;
+            i{
+              font-style: normal;
               color:$red;
             }
           }
@@ -278,19 +320,23 @@
         }
         &.timeArr{
           dl{
-            float: left;
-            width:30%;
-            margin-left:5%;
+            float:none;
+            clear: both;
+            width:100%;
             padding-bottom:5px;
-            &:first-child{margin-left:0;}
-            dd{
-              clear: both;
-              span{
-                clear: both;
-                display: block;
-                font-size:14px;
-                line-height:32px;
+            display: flex;
+            dt{
+              flex: 1;
+              display: flex;
+              line-height:32px;
+              strong{
+                flex: 1;
                 color:$menuActiveText;
+                color:#060606;
+              }
+              span{
+                display: inline-block;
+                color:#333;
               }
             }
           }
@@ -299,6 +345,15 @@
           dl{
             padding-top:20px;
             padding-bottom:15px;
+            dt{
+              span{
+                color:$red;
+                i{
+                  display: inline-block;
+                  margin-right:5px;
+                }
+              }
+            }
             dd{
               .needCustomersBox{
                 clear: both;
@@ -306,15 +361,20 @@
                 width:100%;
                 box-sizing: border-box;
                 min-height:128px;
-                border:1px solid #eee;
+                border:1px solid #e4e8ee;
                 font-size:14px;
                 line-height:24px;
                 padding:15px 20px;
                 color:$subMenuBg;
                 margin-top:10px;
-                margin-bottom:10px;
-                background:#f9f9f9;
+                margin-bottom:6px;
+                background:#fff;
+                border-radius:5px;
                 &+p{
+                  padding-left:10px;
+                  span{
+                    display: inline-block;
+                  }
                   a{
                     font-size: 12px;
                     font-weight: bold;
@@ -329,14 +389,20 @@
           }
         }
         &.divider{
-          border-top:1px solid #eee;
-          border-bottom:1px solid #eee;
-          padding-top:15px;
-          padding-bottom:15px;
+          background:#eff7fa;
+          padding-top:7px;
+          padding-bottom:7px;
           text-align: center;
-          color:$red;
+          line-height: 24px;
+          color:#333333;
+          font-size: 13px;
           strong{
-            color:$menuActiveText;
+            margin-left: 5px;
+            color:#ff840b;
+          }
+          i{
+            margin-right: 5px;
+            color:#ff840b;
           }
         }
         &.SaleFoot{
@@ -347,23 +413,6 @@
             margin-left:5%;
             padding-bottom:5px;
             &:first-child{margin-left:0;}
-            dd{
-              .needCustomers{
-                clear: both;
-                display: block;
-                width:100%;
-                box-sizing: border-box;
-                min-height:128px;
-                border:1px solid #eee;
-                font-size:14px;
-                line-height:24px;
-                padding:15px 20px;
-                color:$subMenuBg;
-                margin-top:10px;
-                margin-bottom:10px;
-                background:#f9f9f9;
-              }
-            }
             &.SaleFootFl{
               dd{
                 padding-top:15px;
@@ -372,19 +421,30 @@
                 }
                 span{
                   line-height:32px;
-                  font-size: 14px;
-                  color: #0755bb;
+                  font-size: 13px;
+                  color: #333;
+                  i{
+                    font-style: normal;
+                    color:$red;
+                  }
                 }
               }
             }
             &.SaleFootMid{
               dt{
                 span{
-                  clear: both;
-                  display: block;
-                  font-size:14px;
                   line-height:32px;
-                  color: #0755bb;
+                  font-size: 13px;
+                  color: #333;
+                  i{
+                    font-style: normal;
+                    color:$red;
+                  }
+                  &:first-child{
+                    clear: both;
+                    display: block;
+                    color:$red;
+                  }
                 }
               }
               dd{
@@ -418,11 +478,13 @@
             &.SaleFootFr{
               dt{
                 span{
-                  clear: both;
-                  display: block;
-                  font-size:14px;
                   line-height:32px;
-                  color: #0755bb;
+                  font-size: 13px;
+                  color: #333;
+                  i{
+                    color:$red;
+                    font-weight: bold;
+                  }
                 }
               }
               dd{
@@ -453,21 +515,45 @@
                     }
                   }
                 }
-                &.SaleFootFrBom{
-                  &>p{
-                    clear: both;
-                    display: block;
-                    text-align: left;
-                    font-size:12px;
-                    line-height:20px;
-                    padding-bottom:15px;
-                  }
-                  .SaleFootFrBomBox{
-                    clear: both;
-                    .el-checkbox{padding-right: 20px;}
-                  }
-                }
               }
+            }
+          }
+        }
+        &.SaleAddEditBtn{
+          text-align: right;
+          padding-top:20px;
+          padding-bottom:20px;
+          font-size: 13px;
+          color:#333;
+          &>p{
+            padding-right: 10px;
+            display: inline-block;
+          }
+          .el-textarea{
+            margin-left: 10px;
+            margin-right: 10px;
+          }
+          .updateBtn{
+            background-color:$menuActiveText!important;
+            border-color:$menuActiveText!important;
+            font-size:16px!important;
+            min-width:96px;
+            box-sizing:border-box!important;
+            height:35px;
+            line-height:33px!important;
+            padding:0px 10px!important;
+            .planeWhite{
+                display:inline-block;
+                width:16px;
+                height:16px;
+                margin-right:10px;
+                .svg-icon{
+                  width:100%!important;
+                  height:100%!important;
+                }
+            }
+            &:hover{
+              opacity: 0.6;
             }
           }
         }
