--- a/src/styles/-Chinaphone.scss
+++ b/src/styles/-Chinaphone.scss
@@ -1,6 +1,34 @@
 ﻿.cn-phone-index{
   .sub-router{
-    width:210px;
+    width:200px;
+  }
+  .search-wrap{
+    margin: 0 -5px;
+    .item-search{
+      margin: 5px;
+      float:left;
+      input::-webkit-input-placeholder {
+        color: #606266;
+      }
+      input::-moz-input-placeholder {
+        color: #606266;
+      }
+      input::-ms-input-placeholder {
+        color: #606266;
+      }
+      .el-input__inner{
+        padding-left: 8px;
+      }
+      .date-range{
+        width: 100%;
+      }
+      .tips-bg-1{
+        .el-input__inner{
+          background-color: #D0E8FF;
+          border: 1px solid #b1c7f8;
+        }
+      }
+    }
   }
 }
 .cn-phone-stat{
@@ -54,46 +82,28 @@
     padding: 15px;
   }
 }
-.page-root.Chinaphone{
+.Chinaphone{
   .search-wrap{
-    padding-bottom:20px;
-    .search-panelOne{
-      .el-date-editor,.el-select,.el-checkbox,.el-input{
-        float: left;
+    padding-bottom:10px;
+    margin: 0 -5px;
+    .item-search{
+      float:left;
+      margin: 5px;
+      input::-webkit-input-placeholder {
+        color: #606266;
       }
-     }
-    .search-panelTwo{
-        float: left;
-        width: 250px;
-        margin-left:1%;
-        .el-input+.el-checkbox{margin-left:10px;}
-        .el-checkbox+.el-input{width: 100%;margin-top:10px;}
-     }
-    .search-panelThree{
-      float: left;
-      width: 105px;
-      margin-left: 2%;
-      .el-input{
-        .el-input__inner{
-          padding: 0 5px;
-          text-align: center;
-        }
+      input::-moz-input-placeholder {
+        color: #606266;
       }
-      .el-checkbox{width: 100%; margin-top:10px;}
-    }
-    .search-panelFour{
-      float: left;
-      width: 95px;
-      margin-left: 2%;
-      .el-checkbox{margin-bottom:10px;}
-      .el-select,.el-checkbox{width: 100%;}
-    }
-    .search-panelFive{
-      float: left;
-      width: 120px;
-      margin-left: 2%;
-      .el-input{margin-bottom:10px;}
-      .el-textarea,.el-input{width: 100%;}
+      input::-ms-input-placeholder {
+        color: #606266;
+      }
+      .el-input__inner{
+        padding-left: 8px;
+      }
+      .date-range{
+        width: 100%;
+      }
     }
   }
 }
@@ -107,9 +117,9 @@
 }
 .ChinaphoneTwo{
   width: 100%;
-  margin-bottom: 11px;
+  margin-bottom: 10px;
   border-bottom: 1px dashed #d6dbe2;
-  padding-bottom: 19px;
+  padding-bottom: 15px;
   .group-header{
     line-height: 0;
     font-size:0;
@@ -131,14 +141,11 @@
       }
     }
     .require{
-      font-size: 14px;
+      font-size: 12px;
       line-height: 24px;
-      margin-right: 10px;
-      margin-top: 4px;
-      margin-bottom: 4px;
-      vertical-align:top;
       display: inline-block;
-      text-align: right;
+      color: $red;
+      margin-left: 10px;
     }
     .all-select{
       line-height: 12px;
@@ -152,13 +159,13 @@
   .group-body{
     width: 100%;
     .team-panel{
-      margin-top:9px;
+      margin:5px 0;
       .team-header{
         line-height: 0;
         font-size:0;
         .require{
           font-size: 14px;
-          line-height: 24px;
+          line-height: 28px;
           margin-right: 10px;
           margin-top: 4px;
           margin-bottom: 4px;
@@ -166,6 +173,9 @@
           display: inline-block;
           width: 72px;
           text-align: right;
+          &.tips{
+            color: $red;
+          }
         }
         .all-select{
           vertical-align: middle;
@@ -314,7 +324,6 @@
         font-size: 46px;
         line-height: 1;
         color: #fc5457;
-        font-weight: bold;
       }
     }
   }
@@ -359,27 +368,6 @@
         display: block;
         width: 100%;
         height: 100%;
-      }
-    }
-  }
-}
-
-@media (max-width:1500px){
-  .page-root.Chinaphone{
-    .search-wrap{
-      &.flex-wrap{
-        display: block;
-        .search-panelOne{
-          &.flex-content{
-            clear: both;
-            display: block;
-            width: 100%;
-            flex: auto;
-          }
-        }
-        .search-panelTwo{
-          margin-left:0px;
-        }
       }
     }
   }
