--- a/src/styles/-resize.scss
+++ b/src/styles/-resize.scss
@@ -14,7 +14,7 @@ html,body,#app,#app > .el-container{
     padding:0;
     height:100vh;
     overflow: hidden;
-    background-color: #f2f2f2;
+    background-color: #f6f7fa;
     font-family:  -apple-system,BlinkMacSystemFont,Helvetica Neue,Tahoma,PingFang SC,Microsoft Yahei,Arial,Hiragino Sans GB,sans-serif;
 }
 table{
