--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -253,9 +253,9 @@
     border:1px solid #e4e8ee;
     padding:5px;
     border-radius:4px;
-    margin-right:15px;
   }  
   .clues-title-btn{
+    margin-left:15px;
     .el-button.el-button--primary{
       padding:7px 10px;
       >span{
@@ -1334,6 +1334,31 @@
         width:100%;
       }
     }
+  }
+}
+/** 重点着色表单框 **/
+.tips-input-1{
+  .el-input__inner{
+    background-color: #D0E8FF;
+    border: 1px solid #b1c7f8;
+  }
+}
+.tips-input-2{
+  .el-input__inner{
+    background-color: #eeffe9;
+    border: 1px solid #abff92;
+  }
+}
+.tips-input-3{
+  .el-input__inner{
+    background-color: #fffae9;
+    border: 1px solid #ffe898;
+  }
+}
+.tips-input-4{
+  .el-input__inner{
+    background-color: #ffe9e9;
+    border: 1px solid #ff9c9c;
   }
 }
 @media (max-width:1600px){
